# Learn_Cmake_SFML

./: CMakeLists.txt  README.md
Cmake_SFML2/: CMakeLists.txt  Cmake_SFML2.cpp  Cmake_SFML2.h
